stylesheets/_posts.scss
.posts {
  transition: opacity 150ms ease-in-out;
  opacity: 1;

  .location {
    color: gray;
    font-size: small;
  }

  .post {
    display: block;
    font-weight: 500;
    padding: 15px;
    color: #222;
    font-size: 18px;
    background: #fff;
    margin-bottom: 25px;
    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
    transition: all 100ms ease-in-out;
    border-radius: $border-radius;
    border: 2px solid transparent;

    .images {
      font-size: 14px;;

      a {
        display: block;
      }
    }

    &:hover {
      border-color: $brand-primary;
      box-shadow: 0 2px 20px 0 rgba(0,0,0, 0.15);
    }

    @each $name, $value in $flair {
      &.type-#{$name} {
        &:hover {
          border-color: $value;
        }
      }
    }
  }

  .load-more {
    padding: 15px;
    display: block;
    text-align: center;
    border-radius: $border-radius;

    &:hover {
      background: #eee;
    }

    &.load-more-disabled {
      color: gray;

      &:hover {
        background: none;
      }
    }
  }

  .post-meta {
    font-size: small;

    span {
      margin-right: 15px;
    }
  }
}

